# servidor

./: 404.html  Cargo.toml  DOCTRINA  estilo.css  func.js  index.html  quehacer  referencias  registro.ldf  registro.pfs
.github/: README  README.md
src/: clases.rs  hebras.rs  lib.rs  main.rs  opciones.rs  registro.rs  solicitud.rs
src/solicitud/: error.rs  get.rs  head.rs  options.rs  tipo.rs
web/: estilo.css  func.js  index.html
web/comida/: estilo.css  index.html
