[package]
name = "servidor"
version = "0.1.0"
edition = "2021"

[dependencies]
if-addrs = "0.10.1"
webbrowser = "0.8.9"
urlencoding = "2.1.2"

[profile.release]
opt-level = 'z'
debug = false
split-debuginfo = 'off'
strip = 'none'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
