[package]
name = "servidor"
version = "1.0.0"
authors = ["Pablo Fernández Serrano <pablofs02@tutanota.com>"]
edition = "2021"
description = "Servidor http minimalista"
readme = "./quehacer"
repository = "https://github.com/pablofs02/servidor/"
license = "GPL-3.0-or-later"
keywords = ["servidor", "http", "minimalista", "rust", "libre"]
categories = ["network-programming", "web-programming::http-server", "command-line-utilities"]
publish = false

[dependencies]
open = "4.1.0"
if-addrs = "0.10.1"
urlencoding = "2.1.2"

[profile.release]
opt-level = 'z'
debug = false
split-debuginfo = 'off'
strip = 'none'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
